# QtExperiments

./: vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt
src/CollapsibleGroupBox/: CMakeLists.txt  main.cpp
src/ImageAnnotations/: CMakeLists.txt  LineAnnotation.hpp  main.cpp
src/OpenGL-2DPainting/: CMakeLists.txt  GLWidgetDraw.hpp  Helper.hpp  WidgetDraw.hpp  Window.hpp  main.cpp
src/SideBar/: CMakeLists.txt  main.cpp
src/SplitterStretch/: CMakeLists.txt  main.cpp
src/StarDelegate/: main.cpp  stardelegate.cpp  stardelegate.h  stareditor.cpp  stareditor.h
